--- a/Login Form with floating placeholder and light button/src/style.css
+++ b/Login Form with floating placeholder and light button/src/style.css
@@ -1,92 +1,85 @@
 @property --rotate {
-   syntax: "<angle>";
+  syntax: "<angle>";
   initial-value: 132deg;
-  inherits : false;
+  inherits: false;
 }
 
 :root {
-  --sky-blue : #229ec9;
+  --point-color: #03e9f4;
 }
-.bg {
-  background-color :#222c41;
+
+body {
   display: grid;
-  place-items :center;
-  
+  place-items: center;
+
   width: 100vw;
   height: 100vh;
+
+  background: linear-gradient(#141e30, #243b55);
 }
 
 .login-form {
-  max-width : 300px; 
-  background-color: rgb(27, 1, 44);
-  border-radius : 10px;
-  
-  display : flex;
-  flex-direction : column;
-  justify-content : center;
-  
-  padding : 40px 30px;
+  max-width: 400px;
+  padding: 40px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
 }
 
 .login-form h2 {
-  text-align : center;
-  margin : 0px;
-  margin-bottom: 30px;
-  color : white;
-}
-
-.login-form input {
-  margin-bottom: 20px;
-  width : 100%;
-  height : 30px;
- 
-  background-color: transparent;
-  border : transparent;
-  border-bottom: 1px solid white;
-}
-
-.login-form input::placeholder {
-  color : white;
-}
-.login-form input:focus::placeholder {
-   display : none;
-}
-.login-form input .username:focus {
-  color : var(--sky-blue);
-  border : transparent;
-  transform: scale(0.8) translateY(-20px);
-}
-
-.login-form button {
-  width : 100px;
-  padding : 10px;
-  margin-top : 20px;
-  background-color: transparent;
-  border : 1px solie   linear-gradient(var(--rotate) ,#5ddcff, #3c67e3, #4e00c2);;
-  color : var(--sky-blue);
-  
-  text-transform : uppercase;
-  background-color: red;
-  position: relative;
-
-}
-
-.login-form button:hover {
-  background-color : var(--sky-blue);
+  margin: 0 0 30px;
+  text-align: center;
   color: white;
-  border-radius : 5px;
 }
 
-.login-form button:hover::before {
-  display: none;
+.login-form .user-box {
+  position: relative;
 }
 
+.login-form .user-box input {
+  width: 100%;
+  margin-bottom: 30px;
+  padding: 10px 0;
 
-@keyframes spin {
-  0% {
-    left:100px;
-  }
-  100% {
-    left:300px;
-  }
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  outline: none;
+}
+
+.login-form .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  color: white;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.login-form .user-box input:focus ~ label,
+.login-form .user-box input:valid ~ label {
+  top: -20px;
+  color: var(--point-color);
+  font-size: 12px;
+}
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
 }
