--- a/Login Form with floating placeholder and light button/src/style.css
+++ b/Login Form with floating placeholder and light button/src/style.css
@@ -70,16 +70,51 @@ body {
   font-size: 12px;
 }
 
-.login-box form a {
+.login-form form a {
   position: relative;
-  display: inline-block;
+  margin-top: 40px;
   padding: 10px 20px;
-  color: #03e9f4;
-  font-size: 16px;
+  
+  display: inline-block;
+  color: var(--point-color);
   text-decoration: none;
   text-transform: uppercase;
   overflow: hidden;
+  
   transition: 0.5s;
-  margin-top: 40px;
   letter-spacing: 4px;
+}
+
+.login-form a:hover {
+  background: var(--point-color);
+  color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 5px var(--point-color),
+              0 0 25px var(--point-color),
+              0 0 50px var(--point-color),
+              0 0 100px var(--point-color);
+              
+}
+
+.login-form a span {
+  position: absolute;
+  display: block;
+}
+
+.login-form a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+ animation : btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+  50%,100% {
+    left: 100%;
+  }
 }
