--- a/Login Form with floating placeholder and light button/src/style.css
+++ b/Login Form with floating placeholder and light button/src/style.css
@@ -106,7 +106,7 @@ body {
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
+  background: linear-gradient(90deg, transparent, var(--point-color));
  animation : btn-anim1 1s linear infinite;
 }
 
@@ -116,5 +116,24 @@ body {
   }
   50%,100% {
     left: 100%;
+  }
+}
+
+.login-form a span:nth-child(2) {
+  top : -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background : linear-gradient(transparent, var(--point-color));
+  animation : btn-anim2 1s linear infinite;
+  animation-delay : .25s;
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%,100% {
+    top: 100%;
   }
 }
