--- a/Login Form with floating placeholder and light button/src/style.css
+++ b/Login Form with floating placeholder and light button/src/style.css
@@ -137,3 +137,41 @@ body {
     top: 100%;
   }
 }
+
+.login-form a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height : 2px;
+  background : linear-gradient(270deg,  transparent, var(--point-color));
+  animation : btn-anim3 1s linear infinite;
+  animation-delay : .5s;
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right : -100%;
+  }
+  50%, 100% {
+    right: 100%;
+  }
+}
+
+.login-form a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(0deg, transparent, var(--point-color));
+  animation: btn-anim4 1s linear infinite;
+  animation-delay : .75s;
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,100% {
+    bottom: 100%;
+  }
+}
